# ozon-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  method_request.yml
.github/workflows/: ci.yml
scripts/: diagnose_live_call.py  diagnose_mcp_stdio.py  generate_subscription_overrides.py
src/ozon_mcp/: __init__.py  __main__.py  config.py  errors.py  server.py  state.py
src/ozon_mcp/data/: perf_swagger.json  seller_swagger.json  swagger_meta.json
src/ozon_mcp/knowledge/: __init__.py  deprecated_methods.yaml  descriptions_overrides.yaml  error_codes.yaml  examples.yaml  loader.py  models.py  pagination_patterns.yaml  quirks.yaml  rate_limits.yaml  safety_overrides.yaml  subscription_overrides.yaml  workflows.yaml
src/ozon_mcp/schema/: __init__.py  catalog.py  errors.py  extractor.py  graph.py  loader.py  resolver.py  responses.py  search.py
src/ozon_mcp/tools/: __init__.py  _safety.py  discovery.py  execution.py  graph.py  reference.py  subscription.py  workflow.py
src/ozon_mcp/transport/: __init__.py  base.py  oauth.py  performance.py  ratelimit.py  seller.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/fixtures/responses/: README.md  prices_response.json  product_info_response.json  product_list_response.json  rating_summary_response.json  seller_info_response.json  turnover_response.json  warehouse_list_response.json
tests/golden/: test_audit_regressions.py  test_search_quality.py  test_search_snapshots.py
tests/golden/expected/: search_results.json
tests/integration/: test_call_method.py  test_describe_method.py  test_search_methods.py  test_tools_e2e.py
tests/live/: test_real_api.py
tests/unit/: test_deprecation.py  test_enum_enrichment.py  test_errors.py  test_examples.py  test_execution.py  test_extractor_sanitize.py  test_graph.py  test_knowledge.py  test_knowledge_integrity.py  test_oauth.py  test_pagination.py  test_pagination_advanced.py  test_quirks.py  test_resolver.py  test_response_models.py  test_retry.py  test_retry_after_parsing.py  test_safety.py  test_search.py  test_search_improvements.py  test_state_ttl.py  test_subscription.py  test_subscription_gate.py  test_subscription_generator.py  test_tool_safety.py  test_transport.py  test_version_sync.py  test_workflows.py
